Fixed characters creation menu and game layout and overflow issues

--- a/abstracts/_colors.scss
+++ b/abstracts/_colors.scss
@@ -1,3 +1,3 @@
 $color-grey: #1b1b1b;
-$color-red: rgb(195, 143, 250);
+$color-red: rgb(183, 49, 49);
 $color-black: #dadada;
