--- a/layout/_layout.scss
+++ b/layout/_layout.scss
@@ -21,16 +21,16 @@
 
 .menu--start {
   display: flex;
-  row-gap: 10vh;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   margin: 45vh 0 0 0;
-  max-height: 100%;
+  max-height: 55vh;
+  min-height: 55vh;
 }
 
 .menu {
-  min-height: 70vh;
+  min-height: 76vh;
   margin: 24vh 0 0 0;
   &__title {
     margin: 0 12vw;
@@ -59,7 +59,7 @@
   justify-content: space-evenly;
   align-items: center;
   background-color: rgba(1, 1, 1, 0);
-  background-image: linear-gradient(rgba(1, 1, 1, 0), $color-grey, $color-grey);
+  background-image: linear-gradient(rgba(1, 1, 1, 0), $color-red);
   margin-top: 0;
 }
 
@@ -70,7 +70,7 @@
   row-gap: 5vh;
   margin-bottom: 6vh;
   &__container {
-    margin: 0 20vw;
+    margin: 10vh 20vw;
   }
 }
 
@@ -282,11 +282,16 @@
 }
 
 .game {
-  position: absolute;
-  top: 40vw;
-  left: 5vw;
-  right: 5vw;
-  min-width: 0vw;
+  // position: absolute;
+  // top: 40vw;
+  // left: 5vw;
+  // right: 5vw;
+  // min-width: 0vw;
+  // margin: 0 auto;
+  margin: 26vh 5vw 0 5vw;
+  max-height: 55vh;
+  min-height: 55vh;
+  max-width: 90vw;
 
   &__menu {
     display: flex;
@@ -301,12 +306,13 @@
 
 .footer {
   min-height: 10vh;
-  min-width: 100vw;
+  min-width: 100%;
+  max-width: 100%;
 }
 
 .game__popup {
   position: fixed;
-  top: 30%;
+  top: 20%;
   left: 50%;
   transform: translateX(-50%);
   padding: 15px;
